Completed Header component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,108 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.somaliland-gradient {
+    background: linear-gradient(101.12deg, #b42e06 27.35%, #edaf13 99.99%, #c82d1c 100%, #c8611c 100%);
+ }
+.white-bg {
+    background: rgba(255, 255, 255, 0.2);
+}
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.checkbox {
+    opacity: 0;
+    position: absolute;
+}
+  
+.label {
+    transform: scale(1.5);
+}
+  
+.ball {
+    top: 2px;
+    left: 2px;
+    transition: transform 0.2s linear;
+}
+
+/*  target the elemenent after the label*/
+.checkbox:checked + .label .ball{
+    transform: translateX(16px);
+}
+
+.fa-moon {
+    color: rgb(236, 11, 236);
+    font-size: 9px;
+}
+  
+.fa-sun {
+    color: rgb(255, 68, 0);
+    font-size: 9px;
+}
+
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 500ms;
+    animation-duration: 500ms;
+}
+
+.fadeIn {
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
+}
+
+.flexCenter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flexBetween {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.flexStart {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.flexStartCenter {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.flexBetweenStart {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.flexCenterStart {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+
