--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,108 +1,131 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .somaliland-gradient {
-    background: linear-gradient(101.12deg, #b42e06 27.35%, #edaf13 99.99%, #c82d1c 100%, #c8611c 100%);
- }
+  background: linear-gradient(
+    101.12deg,
+    #b42e06 27.35%,
+    #edaf13 99.99%,
+    #c82d1c 100%,
+    #c8611c 100%
+  );
+}
 .white-bg {
-    background: rgba(255, 255, 255, 0.2);
+  background: rgba(157, 71, 71, 0.2);
 }
 
 .no-scrollbar::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .checkbox {
-    opacity: 0;
-    position: absolute;
+  opacity: 0;
+  position: absolute;
 }
-  
+
 .label {
-    transform: scale(1.5);
+  transform: scale(1.5);
 }
-  
+
 .ball {
-    top: 2px;
-    left: 2px;
-    transition: transform 0.2s linear;
+  top: 2px;
+  left: 2px;
+  transition: transform 0.2s linear;
 }
 
 /*  target the elemenent after the label*/
-.checkbox:checked + .label .ball{
-    transform: translateX(16px);
+.checkbox:checked + .label .ball {
+  transform: translateX(16px);
 }
 
 .fa-moon {
-    color: rgb(236, 11, 236);
-    font-size: 9px;
+  color: rgb(236, 11, 236);
+  font-size: 9px;
 }
-  
+
 .fa-sun {
-    color: rgb(255, 68, 0);
-    font-size: 9px;
+  color: rgb(255, 68, 0);
+  font-size: 9px;
 }
 
 .animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    -webkit-animation-duration: 500ms;
-    animation-duration: 500ms;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 500ms;
+  animation-duration: 500ms;
 }
 
 .fadeIn {
-    -webkit-animation-name: fadeIn;
-    animation-name: fadeIn;
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
 }
 
 .flexCenter {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .flexBetween {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .flexStart {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .flexStartCenter {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .flexBetweenStart {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .flexCenterStart {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 @keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
+  from {
+    opacity: 0;
+  }
 
-    to {
-        opacity: 1;
-    }
+  to {
+    opacity: 1;
+  }
 }
 
+.gradient-user {
+  background: linear-gradient(to right, #f53803, #f5d020);
+}
 
+.hero-gradient {
+  background: linear-gradient(to right, #f53803, #f5d020);
+}
+
+.fancy-border-radius {
+  border-radius: 30% 70% 45% 55% / 70% 70% 30% 30%;
+
+  /* These are ADDITIONAL styles - add them if you want an object exactly like in the demo above */
+
+  background: #ffffff;
+  background: -webkit-linear-gradient(to right, #ff8317, #d3d66b);
+  background: linear-gradient(to right, #ff8810, #fff87b);
+}
