--- a/client/src/index.css
+++ b/client/src/index.css
@@ -120,6 +120,10 @@
   background: -webkit-linear-gradient(to right, #f08cff, #db54e7);
   background: linear-gradient(to right, #ff8ff4, hwb(298 7% 35%));
 }
+.student-gradient {
+  background: -webkit-linear-gradient(to right, #8cff99, #34d256);
+  background: linear-gradient(to right, #a8ffb4, hwb(149 7% 35%));
+}
 
 .fancy-border-radius {
   border-radius: 30% 70% 45% 55% / 70% 70% 30% 30%;
@@ -130,9 +134,13 @@
   background: -webkit-linear-gradient(to right, #f08cff, #db54e7);
   background: linear-gradient(to right, #ff8ff4, hwb(298 7% 35%));
 }
-.primaryUser{
+.primaryUser {
   color: #de2df2;
 }
-.seconderUser{
+.seconderUser {
   background-color: #fbe2ff;
+}
+
+.radius {
+  border-radius: 5px 30px 5px 30px;
 }
